splitview: Make overview long press work with transient windows.

Enters splitview when focus is on transient child. Use
MruWindowListForCycle instead of MruWindowList because the latter counts
transient child as well, which would give a wrong limit when checking
the minimum amount of windows to open splitview.

Test: ash_unittests SplitViewControllerTest.*
Bug: 827245
Change-Id: Ibe7985fa52f5d4a03b033311540c8385d01b53ee
Reviewed-on: https://chromium-review.googlesource.com/985901
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548261}
Former-commit-id: 5eab353c321d39c1d7c5743e5df8e63588767bb8